media/nzbget/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    flux.weave.works/tag.fluxcloud: glob:v*
    flux.weave.works/automated: 'true'
  labels:
    app: nzbget
    component: frontend
  name: nzbget
  namespace: media
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nzbget
      component: frontend
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: nzbget
        component: frontend
    spec:
      containers:
      - name: nzbget
        image: quay.io/nicolerenee/nzbget:v20.0
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 6789
          name: http
          protocol: TCP
        livenessProbe:
          httpGet:
            path: /
            port: http
        readinessProbe:
          httpGet:
            path: /
            port: http
        resources:
          limits:
            cpu: "2"
            memory: 2Gi
        securityContext:
          runAsUser: 1024
        volumeMounts:
        - mountPath: /config
          name: data
        - mountPath: /downloads
          name: downloads
      volumes:
      - name: data
        iscsi:
          iqn: iqn.2016-01.io.n10:vault01.appdata-nzbget.cdab998267
          targetPortal: 172.20.1.5
          lun: 0
      - name: downloads
        persistentVolumeClaim:
          claimName: media-nzbget
