media/nzbget/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nzbget
  namespace: media
  labels:
    app: nzbget
    component: frontend
spec:
  type: ClusterIP
  ports:
    - name: http
      targetPort: http
      port: 80
      protocol: TCP
  selector:
    app: nzbget
