media/nzbget/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: nzbget
  namespace: media
spec:
  podSelector:
    matchLabels:
      app: nzbget
  policyTypes:
  - Ingress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: sonarr
          component: frontend
  - from:
    - podSelector:
        matchLabels:
          app: radarr
          component: frontend
  - from:
    - namespaceSelector:
        matchLabels:
          purpose: nginx-ingress-prod
    ports:
    - protocol: TCP
      port: 6789
